--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,12 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 
+server.servlet.context-path=/api/v1
+
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 spring.sql.init.data-locations=classpath:data.sql
+
+#security config
+#spring.security.user.name=rakesh
+#spring.security.user.password=pass
