Implement JWT authentication with login and signup endpoints, add global exception handling, and create ApiError class for error responses

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,5 @@ spring.sql.init.data-locations=classpath:data.sql
 #security config
 #spring.security.user.name=rakesh
 #spring.security.user.password=pass
+
+jwt.secretKey=vh3v5hh24g94hv5bwjhf99fr2hv4g252f7qf8f8w7fb2t4624b67
